Autoryzacja, zapisywanie histori, formularz logowania

--- a/Simulator/src/main/webapp/css/mainpage.css
+++ b/Simulator/src/main/webapp/css/mainpage.css
@@ -43,3 +43,16 @@ Laboratories: Technologie programistyczne systemy internetowe - teaching materia
 #startDataFormSet{
 	display: flex;
 }
+
+#logoutLink{
+	
+}
+
+.poss{
+	margin-left: 15px;
+}
+
+
+.vels{
+	margin-left: 30px;
+}
