--- a/Simulator/src/main/webapp/css/mainpage.css
+++ b/Simulator/src/main/webapp/css/mainpage.css
@@ -56,3 +56,11 @@ Laboratories: Technologie programistyczne systemy internetowe - teaching materia
 .vels{
 	margin-left: 30px;
 }
+
+.nav-bar{
+	float: right;
+}
+
+.nav-bar-div{
+	background-color: #EEE;
+}
